--- a/_tweets-md/2009/2009-06-01-tweets.md
+++ b/_tweets-md/2009/2009-06-01-tweets.md
@@ -1,132 +1,138 @@
+---    
+title: "Social Media - June"
+date: "2009-06-30"
+time: 23:59:59 +0000
+---
+
 > Oddly depressed by Google Wave. I had many of those features in SynchroEdit.com over two-and-a-half years ago with synchroedit.com.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 01 22:51:39 +0000 2009](https://twitter.com/ChristopherA/status/1996881707)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 01 22:51:39 +0000 2009](https://twitter.com/ChristopherA/status/1996881707)
 
 ----
 
 > Google Wave & SynchroEdit.com -- as I've often found before, I'm too ahead of the curve.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 01 22:52:32 +0000 2009](https://twitter.com/ChristopherA/status/1996889619)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 01 22:52:32 +0000 2009](https://twitter.com/ChristopherA/status/1996889619)
 
 ----
 
 > Staying in SF with my sweetie overnight so that I can arrive early for WWDC keynote tomorrow.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 00:01:57 +0000 2009](https://twitter.com/ChristopherA/status/2070063723)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 00:01:57 +0000 2009](https://twitter.com/ChristopherA/status/2070063723)
 
 ----
 
 > I'm at the MacIndie Party in Jillians while my sweetie hunts down an organic or grass-fed beef burger.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 00:19:52 +0000 2009](https://twitter.com/ChristopherA/status/2070234080)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 00:19:52 +0000 2009](https://twitter.com/ChristopherA/status/2070234080)
 
 ----
 
 > Arrived early at Moscone for #WWDC but line is so long I'm already way behind the center. Line is already blocks long.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 13:36:03 +0000 2009](https://twitter.com/ChristopherA/status/2076006017)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 13:36:03 +0000 2009](https://twitter.com/ChristopherA/status/2076006017)
 
 ----
 
 > #wwdc line finally moved inside.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 14:55:48 +0000 2009](https://twitter.com/ChristopherA/status/2076789207)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 14:55:48 +0000 2009](https://twitter.com/ChristopherA/status/2076789207)
 
 ----
 
 > A small part of the line for the #WWDC keynote
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 16:42:13 +0000 2009](https://twitter.com/ChristopherA/status/2077980188)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 16:42:13 +0000 2009](https://twitter.com/ChristopherA/status/2077980188)
 
 ----
 
 > (2nd try) A small part of the line to the #WWDC keynote...
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 16:44:43 +0000 2009](https://twitter.com/ChristopherA/status/2078008507)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 16:44:43 +0000 2009](https://twitter.com/ChristopherA/status/2078008507)
 
 ----
 
 > Tried posting photo from iPhone, but the picture uploading services are failing.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 17:07:02 +0000 2009](https://twitter.com/ChristopherA/status/2078276006)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 17:07:02 +0000 2009](https://twitter.com/ChristopherA/status/2078276006)
 
 ----
 
 > (3rd try, using tweetie instead) A small part of the line to the #WWDC keynote...  [http://twitpic.com/6wwoj](http://twitpic.com/6wwoj)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 17:09:49 +0000 2009](https://twitter.com/ChristopherA/status/2078310608)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 17:09:49 +0000 2009](https://twitter.com/ChristopherA/status/2078310608)
 
 ----
 
 > I already use my express card slot on Mac Book Pro with an express card that has a SD Slot, but I'll still miss ability to have cards. #WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 17:12:08 +0000 2009](https://twitter.com/ChristopherA/status/2078341457)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 17:12:08 +0000 2009](https://twitter.com/ChristopherA/status/2078341457)
 
 ----
 
 > My favorite express card for MacBook Pro was the integrated Sprint cellular modem. I really dislike the USB dongles on portables. #WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 17:13:37 +0000 2009](https://twitter.com/ChristopherA/status/2078360419)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 17:13:37 +0000 2009](https://twitter.com/ChristopherA/status/2078360419)
 
 ----
 
 > I'm glad to see firewire 800 on the 12" mac. #wwdc
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 17:14:09 +0000 2009](https://twitter.com/ChristopherA/status/2078367158)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 17:14:09 +0000 2009](https://twitter.com/ChristopherA/status/2078367158)
 
 ----
 
 > Wonder if you can put a cell modem on an SD card? That would be cool. #WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 17:15:18 +0000 2009](https://twitter.com/ChristopherA/status/2078382202)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 17:15:18 +0000 2009](https://twitter.com/ChristopherA/status/2078382202)
 
 ----
 
 > Quick search for SD cell modem cards finds none. Some SD wifi capable cards, but no SD cards. #WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 17:20:58 +0000 2009](https://twitter.com/ChristopherA/status/2078456215)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 17:20:58 +0000 2009](https://twitter.com/ChristopherA/status/2078456215)
 
 ----
 
 > Wikipedia says cellular SD are possible as part of the SDIO standard, but there are no implementations. [http://tinyurl.com/yygzze](http://tinyurl.com/yygzze) #WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 17:24:27 +0000 2009](https://twitter.com/ChristopherA/status/2078499477)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 17:24:27 +0000 2009](https://twitter.com/ChristopherA/status/2078499477)
 
 ----
 
 > It looks like an 32GB iPhone 3GS will cost me $499 from AT&T *AND* will require another two year commitment *AND* an $18 upgrade fee.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 22:31:23 +0000 2009](https://twitter.com/ChristopherA/status/2082170388)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 22:31:23 +0000 2009](https://twitter.com/ChristopherA/status/2082170388)
 
 ----
 
 > The AT&T web page may call me a "valued customer" but a $200 premium and requiring me to renew contract again doesn't make me feel that way.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 22:32:45 +0000 2009](https://twitter.com/ChristopherA/status/2082184496)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 22:32:45 +0000 2009](https://twitter.com/ChristopherA/status/2082184496)
 
 ----
 
 > I'm not going to be able to attend the #WWDC Snow Leopard Server session. Can someone D me with any apache/ SQL performance details?
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 08 23:58:07 +0000 2009](https://twitter.com/ChristopherA/status/2083070179)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 08 23:58:07 +0000 2009](https://twitter.com/ChristopherA/status/2083070179)
 
 ----
 
 > #WWDC is my 2nd conf using Dell Mini 9 as a Mac OSX 10.5.7 hackintosh, but more people notice it here ;-) [http://twitpic.com/6zj5e](http://twitpic.com/6zj5e)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 09 18:19:17 +0000 2009](https://twitter.com/ChristopherA/status/2092572499)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Tue Jun 09 18:19:17 +0000 2009](https://twitter.com/ChristopherA/status/2092572499)
 
 ----
 
 > Dell Mini 9 hackintosh is great with TweetDeck w/narrow column setting.  Great for conferences like #wwdc [http://twitpic.com/6zjeu](http://twitpic.com/6zjeu)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 09 18:22:10 +0000 2009](https://twitter.com/ChristopherA/status/2092605852)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Tue Jun 09 18:22:10 +0000 2009](https://twitter.com/ChristopherA/status/2092605852)
 
 ----
 
 > Does anyone know if the peer-to-peer iPhone GameKit API can be implemented with a Mac as a peer? #WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 09 21:03:26 +0000 2009](https://twitter.com/ChristopherA/status/2094452519)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Tue Jun 09 21:03:26 +0000 2009](https://twitter.com/ChristopherA/status/2094452519)
 
 ----
 
@@ -134,49 +140,49 @@ Replying to [@schwa](https://twitter.com/@schwa/status/2095571235)
 
 > There are a few werewolf iphone apps, but I don't know if any can be used for local games. I can bring some werewolf cards tomorrow.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 09 22:55:01 +0000 2009](https://twitter.com/ChristopherA/status/2095726678)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Tue Jun 09 22:55:01 +0000 2009](https://twitter.com/ChristopherA/status/2095726678)
 
 ----
 
 > If anyone interested in dinner before #WWDC Design Awards tonight, D me.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 09 23:49:26 +0000 2009](https://twitter.com/ChristopherA/status/2096321573)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Tue Jun 09 23:49:26 +0000 2009](https://twitter.com/ChristopherA/status/2096321573)
 
 ----
 
 > I don't like when after some #WWDC sessions they don't take questions, instead take questions on side. I find the public Q&A very valuable.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 17:06:01 +0000 2009](https://twitter.com/ChristopherA/status/2105551381)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 17:06:01 +0000 2009](https://twitter.com/ChristopherA/status/2105551381)
 
 ----
 
 > I've got a great idea for player discovery for when you want to play a game locally (like werewolf) but don't want to leave iPhone app open.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 17:28:03 +0000 2009](https://twitter.com/ChristopherA/status/2105809484)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 17:28:03 +0000 2009](https://twitter.com/ChristopherA/status/2105809484)
 
 ----
 
 > This player discovery technique would use combination of iPhone notification srvc +peer-to-peer game kit +anonymous ephemeral location API
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 17:31:34 +0000 2009](https://twitter.com/ChristopherA/status/2105851026)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 17:31:34 +0000 2009](https://twitter.com/ChristopherA/status/2105851026)
 
 ----
 
 > If you are interested in talking more about the player discovery problem on the iPhone at #WWDC, say over lunch or dinner, let me know.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 17:35:25 +0000 2009](https://twitter.com/ChristopherA/status/2105895887)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 17:35:25 +0000 2009](https://twitter.com/ChristopherA/status/2105895887)
 
 ----
 
 > Lots of cheers from crowd in audience during #WWDC In-App Purchase session on the suggestion that Apple allow purchases from free apps.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 18:19:17 +0000 2009](https://twitter.com/ChristopherA/status/2106400726)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 18:19:17 +0000 2009](https://twitter.com/ChristopherA/status/2106400726)
 
 ----
 
 > Policy for In-App Purchases: No trading of any virtual item purchased in-app to any other person i.e. no intermediate currencies. #WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 18:37:04 +0000 2009](https://twitter.com/ChristopherA/status/2106604569)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 18:37:04 +0000 2009](https://twitter.com/ChristopherA/status/2106604569)
 
 ----
 
@@ -184,7 +190,7 @@ Replying to [@awh_tokyo](https://twitter.com/awh_tokyo/status/2106616412)
 
 > you can't sell an RPG item, say a axe, if that axe can be given to another user. If you did you'd be violating app store rules
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 20:38:23 +0000 2009](https://twitter.com/ChristopherA/status/2108010500)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 20:38:23 +0000 2009](https://twitter.com/ChristopherA/status/2108010500)
 
 ----
 
@@ -192,7 +198,7 @@ Replying to [@zephoria](https://twitter.com/zephoria/status/2107797037)
 
 > I don't like to retweet unless it is really obscure user. Prefer to add value w/content, opinion, or judgement in any tweet I post
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 20:42:59 +0000 2009](https://twitter.com/ChristopherA/status/2108065775)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 20:42:59 +0000 2009](https://twitter.com/ChristopherA/status/2108065775)
 
 ----
 
@@ -200,7 +206,7 @@ Replying to [@zephoria](https://twitter.com/zephoria/status/2107797037)
 
 > however, I do recognize my role as a weak link connection between social networks like iPhone, games, media, etc. so will RT some.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 20:44:10 +0000 2009](https://twitter.com/ChristopherA/status/2108080110)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 20:44:10 +0000 2009](https://twitter.com/ChristopherA/status/2108080110)
 
 ----
 
@@ -208,61 +214,61 @@ Replying to [@zephoria](https://twitter.com/zephoria/status/2105317960)
 
 > I don't like to mod RTs, but I will if no essential content change, like 'with ' to 'w/' or ' and ' to '&' and deleting white sp
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 20:49:43 +0000 2009](https://twitter.com/ChristopherA/status/2108147594)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 20:49:43 +0000 2009](https://twitter.com/ChristopherA/status/2108147594)
 
 ----
 
 > I agree w/ @anildash's predictions for Friday's Facebook URL launch #FUFacebook [http://tr.im/fufacebook](http://tr.im/fufacebook) (via @t @stop)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 21:21:52 +0000 2009](https://twitter.com/ChristopherA/status/2108531433)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 21:21:52 +0000 2009](https://twitter.com/ChristopherA/status/2108531433)
 
 ----
 
 > Smule's MoPhO (Mobile Phone Orchestra) performance during lunch [http://bit.ly/3SsVY](http://bit.ly/3SsVY) #WWDC (via @willipowell)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 23:22:53 +0000 2009](https://twitter.com/ChristopherA/status/2109867851)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 23:22:53 +0000 2009](https://twitter.com/ChristopherA/status/2109867851)
 
 ----
 
 > I'm off to the Twitter HQ for the #WWDC Mac / iPhone Twitter API meetup: [http://tr.im/o5T2](http://tr.im/o5T2)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 10 23:29:05 +0000 2009](https://twitter.com/ChristopherA/status/2109931704)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Wed Jun 10 23:29:05 +0000 2009](https://twitter.com/ChristopherA/status/2109931704)
 
 ----
 
 > Lots of interesting talk regarding Twitter & if we can centralize iPhone's Push Notification Services at Twitter HQ.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 00:21:33 +0000 2009](https://twitter.com/ChristopherA/status/2110487888)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 00:21:33 +0000 2009](https://twitter.com/ChristopherA/status/2110487888)
 
 ----
 
 > Great talk at Twitter HQ regarding exposing geoloc in API. In progress, but currently held up in legal.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 00:23:24 +0000 2009](https://twitter.com/ChristopherA/status/2110507291)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 00:23:24 +0000 2009](https://twitter.com/ChristopherA/status/2110507291)
 
 ----
 
 > Interesting versioning issues with Twitter API. Could be future will be to point to specific URLs domains that spec specific version.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 00:29:33 +0000 2009](https://twitter.com/ChristopherA/status/2110572235)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 00:29:33 +0000 2009](https://twitter.com/ChristopherA/status/2110572235)
 
 ----
 
 > It looks like if you have an app that gets data from API services, like Twitter Trends, you'll have to mark it in iPhone App Store as 17+
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 00:32:10 +0000 2009](https://twitter.com/ChristopherA/status/2110600593)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 00:32:10 +0000 2009](https://twitter.com/ChristopherA/status/2110600593)
 
 ----
 
 > If you want your client to allow users to report Twitter spam, you can report them with a direct message to @spam with the @ name of spammer
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 00:54:03 +0000 2009](https://twitter.com/ChristopherA/status/2110832806)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 00:54:03 +0000 2009](https://twitter.com/ChristopherA/status/2110832806)
 
 ----
 
 > Just met @twittelator coder, just got latest upgrade to Twittelator Pro with Voice Notes support: [http://mobypicture.com/?fs6kja](http://mobypicture.com/?fs6kja)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 01:23:22 +0000 2009](https://twitter.com/ChristopherA/status/2111145645)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 01:23:22 +0000 2009](https://twitter.com/ChristopherA/status/2111145645)
 
 ----
 
@@ -270,127 +276,127 @@ Replying to [@rsarver](https://twitter.com/rsarver/status/2112786531)
 
 > The only time I've ever had my car broken into was s of market at night. Lots of smash & grab. If they see anything in car-&gt;smash!
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 16:45:17 +0000 2009](https://twitter.com/ChristopherA/status/2119001855)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 16:45:17 +0000 2009](https://twitter.com/ChristopherA/status/2119001855)
 
 ----
 
 > If you see me at #WWDC ask me about player discovery, euro-syle board & card games on iPhone, or iPhone apps that can be marketed on RPGnet
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 17:03:11 +0000 2009](https://twitter.com/ChristopherA/status/2119216060)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 17:03:11 +0000 2009](https://twitter.com/ChristopherA/status/2119216060)
 
 ----
 
 > A lot of cool stuff about new compass in iPhone 3GS. It is very smart. #WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 21:45:10 +0000 2009](https://twitter.com/ChristopherA/status/2122581879)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 21:45:10 +0000 2009](https://twitter.com/ChristopherA/status/2122581879)
 
 ----
 
 > For instance, compass detects if you are experiencing mag interference, and then will ask you to wave iPhone in figure 8, and it will fix
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 21:46:28 +0000 2009](https://twitter.com/ChristopherA/status/2122597018)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 21:46:28 +0000 2009](https://twitter.com/ChristopherA/status/2122597018)
 
 ----
 
 > Cool, iPhone 3GS will put heading into photo exif. For instance, this can allow automatic photo stitching of panoramic photos. #WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 21:50:10 +0000 2009](https://twitter.com/ChristopherA/status/2122639055)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 21:50:10 +0000 2009](https://twitter.com/ChristopherA/status/2122639055)
 
 ----
 
 > RT @joehewitt iPhone cases R lk a bra on yr Porsche. Please dont hide the wonderful work of Apple's industrial designers w/ cheap plastic.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 23:22:22 +0000 2009](https://twitter.com/ChristopherA/status/2123668568)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 23:22:22 +0000 2009](https://twitter.com/ChristopherA/status/2123668568)
 
 ----
 
 > I concur with @joehewitt - my iPhone 3G is almost a year old w/o case, and carried often in pocket w/keys, yet no scratches on glass.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 11 23:24:59 +0000 2009](https://twitter.com/ChristopherA/status/2123697028)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 11 23:24:59 +0000 2009](https://twitter.com/ChristopherA/status/2123697028)
 
 ----
 
 > Looking for ride to an East Bay BART station (preferably North Berkeley BART, but MacArthur works) after #WWDC party tonight.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 00:27:37 +0000 2009](https://twitter.com/ChristopherA/status/2124376162)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 00:27:37 +0000 2009](https://twitter.com/ChristopherA/status/2124376162)
 
 ----
 
 > Apple #WWDC takes over Yeuba Buena Park:   GPS location: [http://bit.ly/OxbIW](http://bit.ly/OxbIW)  [http://mobypicture.com/?zcru1y](http://mobypicture.com/?zcru1y)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 01:49:58 +0000 2009](https://twitter.com/ChristopherA/status/2125302629)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 01:49:58 +0000 2009](https://twitter.com/ChristopherA/status/2125302629)
 
 ----
 
 > iPhone In Action & Cake #WWDC   [http://twitpic.com/7664r](http://twitpic.com/7664r) (via @iphoneinaction)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 03:32:24 +0000 2009](https://twitter.com/ChristopherA/status/2126505065)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 03:32:24 +0000 2009](https://twitter.com/ChristopherA/status/2126505065)
 
 ----
 
 > More Cake #WWDC  [http://twitpic.com/766rc](http://twitpic.com/766rc)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 03:37:13 +0000 2009](https://twitter.com/ChristopherA/status/2126561805)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 03:37:13 +0000 2009](https://twitter.com/ChristopherA/status/2126561805)
 
 ----
 
 > The #WWDC audience watching Cake:  [http://twitpic.com/766un](http://twitpic.com/766un)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 03:38:23 +0000 2009](https://twitter.com/ChristopherA/status/2126575169)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 03:38:23 +0000 2009](https://twitter.com/ChristopherA/status/2126575169)
 
 ----
 
 > Cake #WWDC audio battle of the sexes:  [http://mobypicture.com/?p4zlk5](http://mobypicture.com/?p4zlk5)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 03:41:29 +0000 2009](https://twitter.com/ChristopherA/status/2126612975)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 03:41:29 +0000 2009](https://twitter.com/ChristopherA/status/2126612975)
 
 ----
 
 > Cake #WWDC last song:  [http://mobypicture.com/?p9qst6](http://mobypicture.com/?p9qst6)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 03:46:16 +0000 2009](https://twitter.com/ChristopherA/status/2126673082)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 03:46:16 +0000 2009](https://twitter.com/ChristopherA/status/2126673082)
 
 ----
 
 > Cake #WWDC encore song:  [http://mobypicture.com/?8wdmys](http://mobypicture.com/?8wdmys)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 03:51:19 +0000 2009](https://twitter.com/ChristopherA/status/2126737632)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 03:51:19 +0000 2009](https://twitter.com/ChristopherA/status/2126737632)
 
 ----
 
 > Who is going to #WWDC Friday? Schedule looks a little light for me. If you are interested in meeting, let me know soon or I might skip.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 04:29:35 +0000 2009](https://twitter.com/ChristopherA/status/2127266446)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 04:29:35 +0000 2009](https://twitter.com/ChristopherA/status/2127266446)
 
 ----
 
 > Registration for @iPhoneDevCamp is $50 & now open: [http://iphonedevcamp.org](http://iphonedevcamp.org) -- it will be held July 31 - August 2nd at Yahoo! in Sunnyvale.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 18:59:34 +0000 2009](https://twitter.com/ChristopherA/status/2135148778)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 18:59:34 +0000 2009](https://twitter.com/ChristopherA/status/2135148778)
 
 ----
 
 > Didn't set my alarm this morning, woke at 11:40. Don't think I'll drop in at #WWDC for last two sessions. DM if you want to meet today.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 12 19:05:44 +0000 2009](https://twitter.com/ChristopherA/status/2135228827)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 12 19:05:44 +0000 2009](https://twitter.com/ChristopherA/status/2135228827)
 
 ----
 
 > Well, as I expected, I didn't get on in time to get ChristopherA on Facebook. I'm ChristopherA almost everywhere else. #FUFacebook
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 13 04:19:50 +0000 2009](https://twitter.com/ChristopherA/status/2150219007)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sat Jun 13 04:19:50 +0000 2009](https://twitter.com/ChristopherA/status/2150219007)
 
 ----
 
 > At [http://scarycow.com](http://scarycow.com) round 9 where people are pitching little indie short films and evangelizing people to volunteer on their film teams.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 14 21:33:23 +0000 2009](https://twitter.com/ChristopherA/status/2169470013)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sun Jun 14 21:33:23 +0000 2009](https://twitter.com/ChristopherA/status/2169470013)
 
 ----
 
 > Of course some of the pitches @scarycow are quite spare and amateur, but some quite interesting. Genres include drama, horror, comedy, etc.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 14 21:36:09 +0000 2009](https://twitter.com/ChristopherA/status/2169498148)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sun Jun 14 21:36:09 +0000 2009](https://twitter.com/ChristopherA/status/2169498148)
 
 ----
 
@@ -398,86 +404,86 @@ Replying to [@mariosundar](https://twitter.com/@mariosundar/status/2169146529)
 
 > Fellow @scarycow twitterer -- find me after pitches?
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 14 21:39:51 +0000 2009](https://twitter.com/ChristopherA/status/2169535532)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sun Jun 14 21:39:51 +0000 2009](https://twitter.com/ChristopherA/status/2169535532)
 
 ----
 
 > I had a good time at the @scarycow short film pitch mtg. Reminds me of first night of @iPhoneDevCamp -- lots of passionate creative people.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 15 00:04:49 +0000 2009](https://twitter.com/ChristopherA/status/2170975849)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 15 00:04:49 +0000 2009](https://twitter.com/ChristopherA/status/2170975849)
 
 ----
 
 > The AT&T store in El Cerrito has all models, no lines, and about a 15 minute wait inside. [http://twitpic.com/7tbtv](http://twitpic.com/7tbtv)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 19 17:19:10 +0000 2009](https://twitter.com/ChristopherA/status/2240916704)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 19 17:19:10 +0000 2009](https://twitter.com/ChristopherA/status/2240916704)
 
 ----
 
 > In the end got the discounted price on iPhone 3GS due to last minutes changes in AT&T policy. No line at AT&T store, activation was fast.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 19 23:08:05 +0000 2009](https://twitter.com/ChristopherA/status/2245439854)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 19 23:08:05 +0000 2009](https://twitter.com/ChristopherA/status/2245439854)
 
 ----
 
 > Now that I've restored both iPhone 3GS (Yeah! It worked!), I'm doing secure erase of both M's and my old iPhones. Takes about an hour each!
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 19 23:11:19 +0000 2009](https://twitter.com/ChristopherA/status/2245477716)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Fri Jun 19 23:11:19 +0000 2009](https://twitter.com/ChristopherA/status/2245477716)
 
 ----
 
 > My experience with iPhone 3GS video is mixed. I did get a fun impromptu "unicyle tango" video, but most others didn't focus in low light.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 20 07:16:15 +0000 2009](https://twitter.com/ChristopherA/status/2250336836)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sat Jun 20 07:16:15 +0000 2009](https://twitter.com/ChristopherA/status/2250336836)
 
 ----
 
 > Serious data loss bug in iPhone with iPhoto. If you upload to Youtube, and it fails to upload, and you sync to iPhoto, poof! Lose both.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 20 07:32:50 +0000 2009](https://twitter.com/ChristopherA/status/2250445580)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sat Jun 20 07:32:50 +0000 2009](https://twitter.com/ChristopherA/status/2250445580)
 
 ----
 
 > Moderated a panel at an iPhone developer user group in Fremont tonight. I thought it went well even though one of the speakers was a no show
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 25 07:16:54 +0000 2009](https://twitter.com/ChristopherA/status/2323275750)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Thu Jun 25 07:16:54 +0000 2009](https://twitter.com/ChristopherA/status/2323275750)
 
 ----
 
 > Tonight I'm going to a Hang Gathering Concert with 7 hang drum performers at Yoga Mandala in Berkeley [http://bit.ly/6C9a0](http://bit.ly/6C9a0) Tomorrow I perform
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 27 00:39:30 +0000 2009](https://twitter.com/ChristopherA/status/2352551718)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sat Jun 27 00:39:30 +0000 2009](https://twitter.com/ChristopherA/status/2352551718)
 
 ----
 
 > I will be performing tonight two duets with my Hang drum teacher [http://bit.ly/6C9a0](http://bit.ly/6C9a0) -- one with a D minor Hang, the other with the new Halo
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 27 22:14:29 +0000 2009](https://twitter.com/ChristopherA/status/2364200514)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sat Jun 27 22:14:29 +0000 2009](https://twitter.com/ChristopherA/status/2364200514)
 
 ----
 
 > My "student recital" at the Berkeley Gathering Concert went well last night. A few flubs from my perspective, but nobody noticed.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 28 21:18:40 +0000 2009](https://twitter.com/ChristopherA/status/2376628234)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sun Jun 28 21:18:40 +0000 2009](https://twitter.com/ChristopherA/status/2376628234)
 
 ----
 
 > I'm in Seattle, WA today before a faculty retreat for Bainbridge Graduate Institute tomorrow. bgiedu.org offers a green & sustainable MBA.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 28 21:24:45 +0000 2009](https://twitter.com/ChristopherA/status/2376702629)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Sun Jun 28 21:24:45 +0000 2009](https://twitter.com/ChristopherA/status/2376702629)
 
 ----
 
 > The Bainbridge Graduate Institute faculty retreat is held @ Rainbow Lodge    
 > L: [http://bit.ly/vY9Y3](http://bit.ly/vY9Y3) P:   [http://yfrog.com/0ejk2tj](http://yfrog.com/0ejk2tj)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 29 16:39:42 +0000 2009](https://twitter.com/ChristopherA/status/2389722800)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 29 16:39:42 +0000 2009](https://twitter.com/ChristopherA/status/2389722800)
 
 ----
 
 > Pan photo (using Autostitch iPhone app) of the opening circle for the bgiedu.org faculty retreat:   [http://twitpic.com/8s6pq](http://twitpic.com/8s6pq)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 29 19:47:01 +0000 2009](https://twitter.com/ChristopherA/status/2392292115)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 29 19:47:01 +0000 2009](https://twitter.com/ChristopherA/status/2392292115)
 
 ----
 
@@ -485,4 +491,4 @@ Replying to [@withinsight_LLC](https://twitter.com/carriesdreams/status/23904914
 
 > No, I'm not technically a member of BGI faculty, but I'm a faculty advisor and maybe executive in residence next year. TBD.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 29 19:50:39 +0000 2009](https://twitter.com/ChristopherA/status/2392343874)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="12" /> [Mon Jun 29 19:50:39 +0000 2009](https://twitter.com/ChristopherA/status/2392343874)
