--- a/_tweets-md/2009/2009-07-01-tweets.md
+++ b/_tweets-md/2009/2009-07-01-tweets.md
@@ -1,12 +1,18 @@
+---    
+title: "Social Media - July"
+date: "2009-07-31"
+time: 23:59:59 +0000
+---
+
 > Connectivity to BGI faculty retreat was spotty, but here is one highlight -- students giving feedback: [http://twitpic.com/8zz1d](http://twitpic.com/8zz1d)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 02 00:39:56 +0000 2009](https://twitter.com/ChristopherA/status/2429072645)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 02 00:39:56 +0000 2009](https://twitter.com/ChristopherA/status/2429072645)
 
 ----
 
 > Looks like I will be a professor in the fall. I will be teaching an elective social web course at Bainbridge Graduate Institute. bgiedu.org
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 02 00:44:07 +0000 2009](https://twitter.com/ChristopherA/status/2429126848)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 02 00:44:07 +0000 2009](https://twitter.com/ChristopherA/status/2429126848)
 
 ----
 
@@ -14,7 +20,7 @@ Replying to [@technoshaman](https://twitter.com/technoshaman/status/2429335678)
 
 > yes, everything will be open courseware, and the final student projects will be to create new open courseware. Iteration!
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 02 01:44:50 +0000 2009](https://twitter.com/ChristopherA/status/2429957499)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 02 01:44:50 +0000 2009](https://twitter.com/ChristopherA/status/2429957499)
 
 ----
 
@@ -22,7 +28,7 @@ Replying to [@bella_b](https://twitter.com/bella_b/status/2429196809)
 
 > The class will be part of the Dal LaMagna elective series, probably limited to about 25 students. #bgiedu
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 02 02:06:11 +0000 2009](https://twitter.com/ChristopherA/status/2430253804)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 02 02:06:11 +0000 2009](https://twitter.com/ChristopherA/status/2430253804)
 
 ----
 
@@ -30,7 +36,7 @@ Replying to [@jrhoads](https://twitter.com/jrhoads/status/2432919637)
 
 > Yes, I suppose I'm selected for the BGI drum circle elective as well ;-)  I'll hope to also bring up my hang drum.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 03 05:46:50 +0000 2009](https://twitter.com/ChristopherA/status/2449942641)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 03 05:46:50 +0000 2009](https://twitter.com/ChristopherA/status/2449942641)
 
 ----
 
@@ -38,7 +44,7 @@ Replying to [@bella_b](https://twitter.com/bella_b/status/2430701234)
 
 > I'm still getting specifics on exactly how much class and coursework time is in a 3 hour Dal LaMagna elective class.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 03 05:49:15 +0000 2009](https://twitter.com/ChristopherA/status/2449966994)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 03 05:49:15 +0000 2009](https://twitter.com/ChristopherA/status/2449966994)
 
 ----
 
@@ -46,40 +52,40 @@ Replying to [@bella_b](https://twitter.com/bella_b/status/2430701234)
 
 > Tentative title is Using the Web to Affect Social Change, w/1st part survey of best practices, 2nd action learning, 3rd iteration
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 03 05:52:42 +0000 2009](https://twitter.com/ChristopherA/status/2450001838)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 03 05:52:42 +0000 2009](https://twitter.com/ChristopherA/status/2450001838)
 
 ----
 
 > Heading down to the south bay to check out the venue at Yahoo for iPhoneDevCamp -- I'm focused on planning the hack show.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jul 22 16:32:36 +0000 2009](https://twitter.com/ChristopherA/status/2780564382)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 22 16:32:36 +0000 2009](https://twitter.com/ChristopherA/status/2780564382)
 
 ----
 
 > Only 125 spaces remaining for iPhoneDevCamp.org next week at Yahoo in Sunnyvale.  Only $50 for an amazing weekend. Register soon!
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 27 01:39:41 +0000 2009](https://twitter.com/ChristopherA/status/2862348697)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 27 01:39:41 +0000 2009](https://twitter.com/ChristopherA/status/2862348697)
 
 ----
 
 > 40404
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 27 01:42:36 +0000 2009](https://twitter.com/ChristopherA/status/2862391735)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 27 01:42:36 +0000 2009](https://twitter.com/ChristopherA/status/2862391735)
 
 ----
 
 > Only 142 spaces remaining for iPhoneDevCamp.org next week at Yahoo in Sunnyvale. Only $50 for an amazing weekend. Register soon!
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 27 05:47:32 +0000 2009](https://twitter.com/ChristopherA/status/2865895236)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 27 05:47:32 +0000 2009](https://twitter.com/ChristopherA/status/2865895236)
 
 ----
 
 > This afternoon I picked up over $4K in prizes for the @iphonedevcamp #ipdc3 hackathon that will take place Sunday. Some really good stuff.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 01 06:08:43 +0000 2009](https://twitter.com/ChristopherA/status/3066237689)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 01 06:08:43 +0000 2009](https://twitter.com/ChristopherA/status/3066237689)
 
 ----
 
 > Spent most of the evening at @iPhoneDevCamp acting as "matchmaker" to help teams form to create iPhone Apps over weekend. Sunday is show!
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 01 06:10:59 +0000 2009](https://twitter.com/ChristopherA/status/3066262820)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 01 06:10:59 +0000 2009](https://twitter.com/ChristopherA/status/3066262820)
