--- a/_tweets-md/2009/2009-11-01-tweets.md
+++ b/_tweets-md/2009/2009-11-01-tweets.md
@@ -1,48 +1,54 @@
+---    
+title: "Social Media - November"
+date: "2009-11-30"
+time: 23:59:59 +0000
+---
+
 > Heading to Poulsbro, WA near Bainbridge Island to meet @DalLaMagna, a big contributor to BGIedu. He is also auditing my Social Change class
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 01 19:28:57 +0000 2009](https://twitter.com/ChristopherA/status/5344027839)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 01 19:28:57 +0000 2009](https://twitter.com/ChristopherA/status/5344027839)
 
 ----
 
 > I look forward to when the iPhone twitter apps support the new lists feature. For me it is a hugely powerful and useful feature.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 01 20:00:14 +0000 2009](https://twitter.com/ChristopherA/status/5344674932)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 01 20:00:14 +0000 2009](https://twitter.com/ChristopherA/status/5344674932)
 
 ----
 
 > RT @danfrakes (@ravenme): Safari has 6 windows with ~50 tabs & hasn't been relaunched in weeks. Not possible before ClickToFlash. [Me too!]
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 01 20:05:10 +0000 2009](https://twitter.com/ChristopherA/status/5344786557)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 01 20:05:10 +0000 2009](https://twitter.com/ChristopherA/status/5344786557)
 
 ----
 
 > I'm on the Bainbridge Ferry working on my presentation for tomorrow and preparing for next week's Intensive at IslandWood.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 01 23:45:27 +0000 2009](https://twitter.com/ChristopherA/status/5349440650)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 01 23:45:27 +0000 2009](https://twitter.com/ChristopherA/status/5349440650)
 
 ----
 
 > This week is heart of course on Using Social Web for Change. Covering Cialdini's influence, BJ Foggs 8 steps for persuasive design, and more
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 01 23:47:14 +0000 2009](https://twitter.com/ChristopherA/status/5349477146)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 01 23:47:14 +0000 2009](https://twitter.com/ChristopherA/status/5349477146)
 
 ----
 
 > Now that I've got a more reliable internet I've been catching up on my student's first social web videos — I'm really impressed and jazzed.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 02 06:12:42 +0000 2009](https://twitter.com/ChristopherA/status/5357405380)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 02 06:12:42 +0000 2009](https://twitter.com/ChristopherA/status/5357405380)
 
 ----
 
 > My students assigned to do their first social web videos this week, at least 30 seconds. Some of their first efforts: [http://bit.ly/2affyj](http://bit.ly/2affyj)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 02 07:17:27 +0000 2009](https://twitter.com/ChristopherA/status/5358219671)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 02 07:17:27 +0000 2009](https://twitter.com/ChristopherA/status/5358219671)
 
 ----
 
 > Another great video from my "Social Web for Social Change" students. This one from Justin Tilson "A little about me" [http://bit.ly/1YtwjG](http://bit.ly/1YtwjG)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 03 00:40:52 +0000 2009](https://twitter.com/ChristopherA/status/5378024271)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 03 00:40:52 +0000 2009](https://twitter.com/ChristopherA/status/5378024271)
 
 ----
 
@@ -50,49 +56,49 @@ Replying to [@DaisyWhitney](https://twitter.com/DaisyWhitney/status/5377382095)
 
 > Ask John Buckman of Magnatune.com about your classic music question - very accessible, and if he doesn't he knows who.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 03 00:45:03 +0000 2009](https://twitter.com/ChristopherA/status/5378123051)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 03 00:45:03 +0000 2009](https://twitter.com/ChristopherA/status/5378123051)
 
 ----
 
 > Had a great day visioneering about BGIedu with @GiffordPinchot and @DalLaMagna—the evening we added @BonnieJWallace and @sustainabileMBA
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 04 08:13:11 +0000 2009](https://twitter.com/ChristopherA/status/5415542918)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 04 08:13:11 +0000 2009](https://twitter.com/ChristopherA/status/5415542918)
 
 ----
 
 > #qotd "building a school is a political act", speaker Lisa Capa during CAIR presentation at BGIedu about building schools in 3rd world
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 06 05:14:19 +0000 2009](https://twitter.com/ChristopherA/status/5471392948)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 06 05:14:19 +0000 2009](https://twitter.com/ChristopherA/status/5471392948)
 
 ----
 
 > RT @bcampbelljr via @dina: Idea from TEDIndia - write your obituary.  If you don't like the way it reads, change your life - now.  #tedindia
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 06 05:15:50 +0000 2009](https://twitter.com/ChristopherA/status/5471419270)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 06 05:15:50 +0000 2009](https://twitter.com/ChristopherA/status/5471419270)
 
 ----
 
 > RT @NicoleLazzaro: To others I walk a tight rope spooled from my own hands. To me I dance a known path on solid ground #innovation
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 06 05:16:44 +0000 2009](https://twitter.com/ChristopherA/status/5471434250)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 06 05:16:44 +0000 2009](https://twitter.com/ChristopherA/status/5471434250)
 
 ----
 
 > RT @NicoleLazzaro: The Web allowed sharing documents. Web 2.0 allows sharing verbs. #lrnchat
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 06 05:17:58 +0000 2009](https://twitter.com/ChristopherA/status/5471454311)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 06 05:17:58 +0000 2009](https://twitter.com/ChristopherA/status/5471454311)
 
 ----
 
 > Student live tweeting my class at #bgi566
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 08 18:04:17 +0000 2009](https://twitter.com/ChristopherA/status/5536817384)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 08 18:04:17 +0000 2009](https://twitter.com/ChristopherA/status/5536817384)
 
 ----
 
 > Had a great weekend at BGIedu intensive, thriving inside this sustainable MBA learning community. Great heart, comradery, and creativity.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 08 20:52:43 +0000 2009](https://twitter.com/ChristopherA/status/5540501443)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 08 20:52:43 +0000 2009](https://twitter.com/ChristopherA/status/5540501443)
 
 ----
 
@@ -100,65 +106,65 @@ Replying to [@sharakarasic](https://twitter.com/sharakarasic/status/5541986836)
 
 > re: cafe concentration, in comm science a little noise can aid in identifying weak signals. Probably true for brain as well.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 08 23:25:34 +0000 2009](https://twitter.com/ChristopherA/status/5543937794)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 08 23:25:34 +0000 2009](https://twitter.com/ChristopherA/status/5543937794)
 
 ----
 
 > [actually a good idea] RT @alevin: hahaha.  private twitter lists "signal" and "noise"
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 10 20:13:07 +0000 2009](https://twitter.com/ChristopherA/status/5598006777)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 10 20:13:07 +0000 2009](https://twitter.com/ChristopherA/status/5598006777)
 
 ----
 
 > My #BGIedu class #bgimgt566sx should read this post by Twitter CEO @Ev "Why Retweet works the way it does" [http://bit.ly/jpMhN](http://bit.ly/jpMhN)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 11 18:21:18 +0000 2009](https://twitter.com/ChristopherA/status/5625514953)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 11 18:21:18 +0000 2009](https://twitter.com/ChristopherA/status/5625514953)
 
 ----
 
 > My sustainable MBA students at BGIedu are doing a survey on how a banks can better serve the community. Help them at [http://bit.ly/12cUNb](http://bit.ly/12cUNb)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 15 03:10:12 +0000 2009](https://twitter.com/ChristopherA/status/5726425714)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 15 03:10:12 +0000 2009](https://twitter.com/ChristopherA/status/5726425714)
 
 ----
 
 > This is very oþ§çÜrë
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 15 23:25:06 +0000 2009](https://twitter.com/ChristopherA/status/5749168268)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 15 23:25:06 +0000 2009](https://twitter.com/ChristopherA/status/5749168268)
 
 ----
 
 > New post "Paying for Favors" in my blog Life With Alacrity [http://bit.ly/58jSJ0](http://bit.ly/58jSJ0) on the topic of social capital, equity & participation.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 22 19:20:12 +0000 2009](https://twitter.com/ChristopherA/status/5952905889)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 22 19:20:12 +0000 2009](https://twitter.com/ChristopherA/status/5952905889)
 
 ----
 
 > Having a celebration at my home for the Bainbridge Graduate Institute community members located in the Bay Area. Expecting 25 or so. #bgiedu
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 22 22:36:13 +0000 2009](https://twitter.com/ChristopherA/status/5957823509)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 22 22:36:13 +0000 2009](https://twitter.com/ChristopherA/status/5957823509)
 
 ----
 
 > Discussion during SF bay area Bainbridge Graduate Institute community gathering, led by @GiffordPinchot #BGIedu  [http://twitpic.com/qkxyc](http://twitpic.com/qkxyc)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 23 01:59:11 +0000 2009](https://twitter.com/ChristopherA/status/5962995094)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 23 01:59:11 +0000 2009](https://twitter.com/ChristopherA/status/5962995094)
 
 ----
 
 > Andy & Cindy's Thai Cuisine [http://bit.ly/8pHAXa](http://bit.ly/8pHAXa) was a hit at the BGIedu gathering. They have booth at the Berkeley Organic Farmers Market.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 23 05:54:47 +0000 2009](https://twitter.com/ChristopherA/status/5969238012)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 23 05:54:47 +0000 2009](https://twitter.com/ChristopherA/status/5969238012)
 
 ----
 
 > My iPhone book publisher is offering a deal of the day: Unlocking Android and iPhone in Action—buy 1 ebook and get 1  
 > free! Use code dotd1129
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 24 06:26:07 +0000 2009](https://twitter.com/ChristopherA/status/6001184787)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 24 06:26:07 +0000 2009](https://twitter.com/ChristopherA/status/6001184787)
 
 ----
 
 > This time of year I appreciate the water-cut slate leaves in my sidewalk—less cleanup: [http://twitpic.com/rd8cj](http://twitpic.com/rd8cj) [http://twitpic.com/rd8cg](http://twitpic.com/rd8cg)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 28 22:47:18 +0000 2009](https://twitter.com/ChristopherA/status/6153136076)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 28 22:47:18 +0000 2009](https://twitter.com/ChristopherA/status/6153136076)
