--- a/_tweets-md/2009/2009-12-01-tweets.md
+++ b/_tweets-md/2009/2009-12-01-tweets.md
@@ -1,188 +1,193 @@
+---    
+title: "Social Media - December"
+date: "2009-12-31"
+time: 23:59:59 +0000
+---
+
 > Heading to Seattle then ferry to Bainbridge - staying at @DalLaMagna's home tonight, in @BGIedu offices tomorrow if anyone wants to meet.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 20:08:48 +0000 2009](https://twitter.com/ChristopherA/status/6245360577)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 20:08:48 +0000 2009](https://twitter.com/ChristopherA/status/6245360577)
 
 ----
 
 > I really like Tweetie 2's retweet visualization on iPhone - shows both avatar icons, the retweeter's icon is smaller.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 20:14:27 +0000 2009](https://twitter.com/ChristopherA/status/6245506782)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 20:14:27 +0000 2009](https://twitter.com/ChristopherA/status/6245506782)
 
 ----
 
 > Had a seridipitous meeting with former Wyndham Hill musician Barbara Higbie while on plane. I always enjoy talking with artists.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 22:45:57 +0000 2009](https://twitter.com/ChristopherA/status/6249691764)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 22:45:57 +0000 2009](https://twitter.com/ChristopherA/status/6249691764)
 
 ----
 
 > RT @wseltzer: Zahava Levine, Youtube, reports that in both Texas and Mexico, political candidates have used DMCA to take-down opponents  ...
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 22:55:23 +0000 2009](https://twitter.com/ChristopherA/status/6249965615)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 22:55:23 +0000 2009](https://twitter.com/ChristopherA/status/6249965615)
 
 ----
 
 > RT @amyjokim: WOW - great advice on how to reach out to people you don't know [http://bit.ly/7XEE6v](http://bit.ly/7XEE6v)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 22:58:03 +0000 2009](https://twitter.com/ChristopherA/status/6250042779)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 22:58:03 +0000 2009](https://twitter.com/ChristopherA/status/6250042779)
 
 ----
 
 > Event Dec 8 in Seattle - @SMCSeattle 'Building an Engaged Community' featuring @Veronica. [http://bit.ly/8b7erU](http://bit.ly/8b7erU) /via @alaskaair
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 23:04:21 +0000 2009](https://twitter.com/ChristopherA/status/6250231667)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 23:04:21 +0000 2009](https://twitter.com/ChristopherA/status/6250231667)
 
 ----
 
 > RT @debs: cities push us past our limits. if we layer network sociology on city-we risk losing anonymity that brings life to cities @agp ...
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 23:06:26 +0000 2009](https://twitter.com/ChristopherA/status/6250291917)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 23:06:26 +0000 2009](https://twitter.com/ChristopherA/status/6250291917)
 
 ----
 
 > Lots of my socialweb collegues are quoting @agpublic talk at #sn09 today.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 23:08:18 +0000 2009](https://twitter.com/ChristopherA/status/6250346120)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 23:08:18 +0000 2009](https://twitter.com/ChristopherA/status/6250346120)
 
 ----
 
 > RT @kevinmarks: says @zephoria: people able to bring city aspects to rural areas through technology - Out in the country  [http://bit.ly/](http://bit.ly/) ...
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 23:13:45 +0000 2009](https://twitter.com/ChristopherA/status/6250503634)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 23:13:45 +0000 2009](https://twitter.com/ChristopherA/status/6250503634)
 
 ----
 
 > RT @kevinmarks: says @zephoria we give data to law enforcement really fast, but not to teachers and social workers who are there to supp ...
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 23:14:44 +0000 2009](https://twitter.com/ChristopherA/status/6250531538)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 23:14:44 +0000 2009](https://twitter.com/ChristopherA/status/6250531538)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/amyjokim/status/6250825028)
 
 > @amyjokim: I too am somewhat hesitant about using new RT button. Trying it a bit today primarily to bridge my green and social web audiences
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 01 23:31:35 +0000 2009](https://twitter.com/ChristopherA/status/6251024088)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 01 23:31:35 +0000 2009](https://twitter.com/ChristopherA/status/6251024088)
 
 ----
 
 > RT @kevinmarks: says @mcandrew I have miraculously been authorized to access facebook, twitter + linkedin in the @whitehouse after 5 mon ...
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Dec 02 01:16:42 +0000 2009](https://twitter.com/ChristopherA/status/6254173066)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 02 01:16:42 +0000 2009](https://twitter.com/ChristopherA/status/6254173066)
 
 ----
 
 > RT @wseltzer: #sn09 @mcandrew: Gov can't just sign up for free apps, bc it can't agree to be bound by state law, create unbounded liabil ...
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Dec 02 01:18:26 +0000 2009](https://twitter.com/ChristopherA/status/6254226902)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 02 01:18:26 +0000 2009](https://twitter.com/ChristopherA/status/6254226902)
 
 ----
 
 > Very interesting paper “Human group formation in online guilds and offline gangs driven by a common team dynamic” [http://bit.ly/6Jj9MF](http://bit.ly/6Jj9MF)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Dec 02 01:52:46 +0000 2009](https://twitter.com/ChristopherA/status/6255285958)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 02 01:52:46 +0000 2009](https://twitter.com/ChristopherA/status/6255285958)
 
 ----
 
 > Keypoints of [http://bit.ly/6Jj9MF](http://bit.ly/6Jj9MF) - both gamers and gangs recruit for variety of skills, people join them based on what they can add to team
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Dec 02 01:57:37 +0000 2009](https://twitter.com/ChristopherA/status/6255429843)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 02 01:57:37 +0000 2009](https://twitter.com/ChristopherA/status/6255429843)
 
 ----
 
 > Spent day at BGIedu offices. Challenge: how to remain an angel of change within this organization and for students after this quarter ends.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 03 03:41:20 +0000 2009](https://twitter.com/ChristopherA/status/6292358767)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 03 03:41:20 +0000 2009](https://twitter.com/ChristopherA/status/6292358767)
 
 ----
 
 > +1 "If immigrant entrepreneurs want to start a company in the US...raise a moderate amount of money...we should let them" [http://j.mp/6J4piP](http://j.mp/6J4piP)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 03 03:51:46 +0000 2009](https://twitter.com/ChristopherA/status/6292637300)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 03 03:51:46 +0000 2009](https://twitter.com/ChristopherA/status/6292637300)
 
 ----
 
 > @rycaut re: "not for exit" startups—this is a major topic at BGIedu sustainable MBA. Look up what is going on with states offering B corp.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 03 03:56:43 +0000 2009](https://twitter.com/ChristopherA/status/6292766925)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 03 03:56:43 +0000 2009](https://twitter.com/ChristopherA/status/6292766925)
 
 ----
 
 > RT @bjfogg: I annotated my Obama-Twitter persuasion video. It's fast work, but the annotations help. [http://www.youtube.com/watch?v=VY3i](http://www.youtube.com/watch?v=VY3i) ...
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 03 19:17:30 +0000 2009](https://twitter.com/ChristopherA/status/6312241701)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 03 19:17:30 +0000 2009](https://twitter.com/ChristopherA/status/6312241701)
 
 ----
 
 > According to First Follower, @jeffpulver was my first twitter reader [http://bit.ly/ffollower](http://bit.ly/ffollower)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 03 19:37:51 +0000 2009](https://twitter.com/ChristopherA/status/6312762236)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 03 19:37:51 +0000 2009](https://twitter.com/ChristopherA/status/6312762236)
 
 ----
 
 > Successful workshop explaining the BGIedu social web to alumni at the IslandWood Intensive. Added # to [http://delicious.com/network/BGIedu](http://delicious.com/network/BGIedu)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Dec 05 20:51:22 +0000 2009](https://twitter.com/ChristopherA/status/6379303725)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Dec 05 20:51:22 +0000 2009](https://twitter.com/ChristopherA/status/6379303725)
 
 ----
 
 > My "Using the Social Web for Social Web" class running creating a new social change video in just 3 hours. Results soon. #bgiedu
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Dec 06 00:20:29 +0000 2009](https://twitter.com/ChristopherA/status/6384491708)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Dec 06 00:20:29 +0000 2009](https://twitter.com/ChristopherA/status/6384491708)
 
 ----
 
 > Social change video "Gandhi's 7 Sins", by my students in "Using the Social Web for Social Change" in 3-1/2 hours [http://bit.ly/gandhis7sins](http://bit.ly/gandhis7sins)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Dec 06 06:11:42 +0000 2009](https://twitter.com/ChristopherA/status/6392977517)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Dec 06 06:11:42 +0000 2009](https://twitter.com/ChristopherA/status/6392977517)
 
 ----
 
 > RT @1timstreet: Internet Video Publishing Best Practices & Website Video Tips [http://bit.ly/4VYLkT](http://bit.ly/4VYLkT)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Dec 06 20:59:12 +0000 2009](https://twitter.com/ChristopherA/status/6410043177)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Dec 06 20:59:12 +0000 2009](https://twitter.com/ChristopherA/status/6410043177)
 
 ----
 
 > At King Street Station in Seattle, taking Amtrak Coast Starlight train to Berkeley. Beautiful clear crisp skies make for spectacular views.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Dec 07 17:33:46 +0000 2009](https://twitter.com/ChristopherA/status/6436617531)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Dec 07 17:33:46 +0000 2009](https://twitter.com/ChristopherA/status/6436617531)
 
 ----
 
 > Great day for train ride. Crisp blue sky. Perfect view of Olympic Peninsula.  [http://twitpic.com/skidb](http://twitpic.com/skidb)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Dec 07 20:12:14 +0000 2009](https://twitter.com/ChristopherA/status/6440408197)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Dec 07 20:12:14 +0000 2009](https://twitter.com/ChristopherA/status/6440408197)
 
 ----
 
 > Back at home in Berkeley — was a great train ride but didn't sleep well so took a long nap once I got home.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Dec 09 07:01:05 +0000 2009](https://twitter.com/ChristopherA/status/6490336562)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 09 07:01:05 +0000 2009](https://twitter.com/ChristopherA/status/6490336562)
 
 ----
 
 > Trying to decide if I should go to NATPE again this year. Old style Hollywood mostly, but a few grok new media.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 17 21:17:47 +0000 2009](https://twitter.com/ChristopherA/status/6774709150)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 17 21:17:47 +0000 2009](https://twitter.com/ChristopherA/status/6774709150)
 
 ----
 
 > Waterfall at bottom of Phoenix Lake:   [http://twitpic.com/tx8rs](http://twitpic.com/tx8rs)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 17 21:20:56 +0000 2009](https://twitter.com/ChristopherA/status/6774793476)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 17 21:20:56 +0000 2009](https://twitter.com/ChristopherA/status/6774793476)
 
 ----
 
 > My BGIedu quarter officially ends tomorrow when I turn in grades. You can see all of my student's videos at [http://bit.ly/bgimgt566sx-09](http://bit.ly/bgimgt566sx-09)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 17 21:23:51 +0000 2009](https://twitter.com/ChristopherA/status/6774870887)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 17 21:23:51 +0000 2009](https://twitter.com/ChristopherA/status/6774870887)
 
 ----
 
 > Experimenting with the new Chumby One — mostly using it as an ambient device behind monitor with twitter, facebook and weather feeds.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Dec 19 01:10:11 +0000 2009](https://twitter.com/ChristopherA/status/6814705702)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Dec 19 01:10:11 +0000 2009](https://twitter.com/ChristopherA/status/6814705702)
 
 ----
 
@@ -190,19 +195,19 @@ Replying to [@bella_b](https://twitter.com/bella_b/status/6834930291)
 
 > tips for get halo or bellart hand pans - get on list, pay deposit quickly when asked. Hang drum is harder - fax Felix & Sabina.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 22 13:36:04 +0000 2009](https://twitter.com/ChristopherA/status/6928870141)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 22 13:36:04 +0000 2009](https://twitter.com/ChristopherA/status/6928870141)
 
 ----
 
 > On way to Jacksonville, FL. My family is celebrating in Jax, M's snowbirds renting home nearby Amelia Island. The confluence pulled us in.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 22 13:42:06 +0000 2009](https://twitter.com/ChristopherA/status/6929010814)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 22 13:42:06 +0000 2009](https://twitter.com/ChristopherA/status/6929010814)
 
 ----
 
 > Warm Christmas Eve in Downtown Jacksonville from riverwalk:  [http://twitpic.com/uz9qg](http://twitpic.com/uz9qg)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 24 17:40:00 +0000 2009](https://twitter.com/ChristopherA/status/7006056381)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 24 17:40:00 +0000 2009](https://twitter.com/ChristopherA/status/7006056381)
 
 ----
 
@@ -210,22 +215,22 @@ Replying to [@hrheingold](https://twitter.com/hrheingold/status/6976338565)
 
 > I tend to use the words social web over social media, as the latter feels more video dominant whereas the social web is broader.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 24 20:10:34 +0000 2009](https://twitter.com/ChristopherA/status/7010146547)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 24 20:10:34 +0000 2009](https://twitter.com/ChristopherA/status/7010146547)
 
 ----
 
 > RT @bsfarrington: Watching a whale slap its fins in front of our condo
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Dec 27 22:59:52 +0000 2009](https://twitter.com/ChristopherA/status/7103076440)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Dec 27 22:59:52 +0000 2009](https://twitter.com/ChristopherA/status/7103076440)
 
 ----
 
 > @bsfarrington, M and I watched humback whale and dolphins playing off of Amelia Island beach.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Dec 27 23:01:52 +0000 2009](https://twitter.com/ChristopherA/status/7103129796)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Dec 27 23:01:52 +0000 2009](https://twitter.com/ChristopherA/status/7103129796)
 
 ----
 
 > RT @NicoleLazzaro: The  world would be a better place if max corporate size was the Dunbar number. @ 150 employees caring for 150 customers.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Dec 30 16:05:33 +0000 2009](https://twitter.com/ChristopherA/status/7199790870)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 30 16:05:33 +0000 2009](https://twitter.com/ChristopherA/status/7199790870)
